# gzxfancontrol

./: .gitignore  CMakeLists.txt  CMakeSettings.json  gzxfancontrol.cpp
